# MyBasicAppComponents

./: .gitignore  build.gradle  settings.gradle  shared-build.gradle
app/: build.gradle
app/Tools/_SignKey/: Hawk-release.jks
app/doc/: Pd.suml  basic.suml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: rsa_private_testkey.pem  rsa_public_testkey.pem
app/src/main/cpp/: CMakeLists.txt  myc.c  myc.h  mycpp.cpp  plasma.c  plasmabmp.c  sensorgraph.cpp
app/src/main/res/anim/: myalpha_anim.xml
app/src/main/res/drawable/: bg_layout_1.xml  bg_layout_2.xml  tooltip_bg.xml
app/src/main/res/layout/: activity_handlerthreadlooper.xml  activity_main.xml  activityinnerreceiver.xml  advancedatastructure_activity.xml  alarmmanageractivity.xml  anim_space.xml  annotation.xml  app_list_row.xml  basicdatastructure_activity.xml  bt_generic_activity.xml  btchat_activity.xml  buttons_activity.xml  bytearray_activity.xml  compare_serial_json_parcel_activity.xml  coundowntimer_activity.xml  crashreport_activity.xml  detect_area_height.xml  detect_area_transparent.xml  exoplayeractivity.xml  fb_activity_native_ad.xml  file_search_picker.xml  fragment_colorpicker.xml  getpermissionactivity.xml  googlemap_activity.xml  (+133 more)
app2/: build.gradle
app2/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
kotlinlibrary/: build.gradle
kotlinlibrary/src/main/: AndroidManifest.xml
libs/gif-library/: AndroidManifest.xml  build.gradle
mylibrary/: build.gradle
mylibrary/src/main/: AndroidManifest.xml
protobuf/src/main/proto/: sample.proto
(+1054 files in other folders)
